Fix z-index of stick tag list

--- a/_sass/_archive.scss
+++ b/_sass/_archive.scss
@@ -21,6 +21,8 @@
     top: 0;
 
     &.sticky {
+        z-index: 1000;
+
         a {
             display: inline-block;
         }
